# ironcoin

./: Cargo.toml  README.md  compile-protos.sh
src/: app.rs  balance.rs  block.rs  blocktree.rs  crypto.rs  error.rs  main.rs  rpc.rs  service.rs  simples_pb.rs  staking.rs  store.rs  tx.rs  wallet.rs
src/proto/: ironcoin_pb.proto  simples_pb.proto
